tests/ok/std-boxed-set-drop-value.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

fn main() -> i64 {
  var zone = zone::create(128);
  var boxed = Box::new<i64>(ref mut zone, 21);

  boxed.set(34);
  let value = boxed.get();

  drop boxed;
  zone::destroy(zone);
  return value;
}
